force-app/main/default/objects/WorkRequest__c/WorkRequest__c.object-meta.xml
<CustomObject>
    <description>Where an external system needs to kick off a task, a request to create a task can be inserted here.</description>
    <label>Work request</label>
    <nameField>
        <displayFormat>WR-{000000}</displayFormat>
        <label>Work request number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>