force-app/main/default/objects/WorkRequest__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>Due date input</label>
    <type>Date</type>
</CustomField>