force-app/main/default/objects/WorkRequest__c/fields/HouseholdId__c.field-meta.xml
<CustomField>
    <fullName>HouseholdId__c</fullName>
    <label>Household ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>