force-app/main/default/objects/WorkRequest__c/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Task type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>