force-app/main/default/objects/WorkRequest__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <label>What ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>