force-app/main/default/objects/WorkRequest__c/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <label>Who ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>