force-app/main/default/objects/WorkRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TaskType__c</columns>
    <columns>WhatId__c</columns>
    <columns>HouseholdId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>